代码结构调整，新增 jwt 中间件
