# internal/server/model/pixiv/pixivresp/pixiv_resp.go
@@ -1,0 +1,5 @@
+package pixivresp
+
+type Images struct {
+	ImgUrls []string `json:"img_urls"`
+}
