# internal/server/model/user/usermodel/user_model.go
@@ -1,0 +1,8 @@
+package usermodel
+
+import "github.com/golang-jwt/jwt/v4"
+
+type Claims struct {
+	Username string `json:"username"`
+	jwt.RegisteredClaims
+}
