# internal/server/model/user/userreq/user_req.go
@@ -1,0 +1,6 @@
+package userreq
+
+type User struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
