# internal/server/model/user/userresp/user_resp.go
@@ -1,0 +1,9 @@
+package userresp
+
+type Token struct {
+	Token string `json:"token"`
+}
+
+type User struct {
+	Username string `json:"username"`
+}
