# internal/server/router/pixiv/model.go
@@ -1,9 +1,0 @@
-package pixiv
-
-type Images struct {
-	ImgUrls []string `json:"img_urls"`
-}
-
-type GetParams struct {
-	Num int `form:"num,default=1"`
-}
